@@ -1,5 +1,6 @@
 kathara (__VERSION__-__DEBIAN_PACKAGE_VERSION____UBUNTU_VERSION__) __UBUNTU_VERSION__; urgency=low
 
-  * Fix slug dependency.
+  * Fix rp_filter with AppArmor
+  * Bridge Patch is done once.
 
- -- Lorenzo Ariemma <******@gmail.com>  __DATE__
+ -- Mariano Scazzariello <******@gmail.com>  __DATE__
